# DynaDBG

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  environment.yml
.github/workflows/: main.yml
analytics/: analizer.py  inputs_dimension.json  run.sh
analytics/debug/creation/: creation-1024-notimer.txt  creation-1024-timer.txt  creation-128-notimer.txt  creation-128-timer.txt  creation-16-notimer.txt  creation-16-timer.txt  creation-2048-notimer.txt  creation-2048-timer.txt  creation-256-notimer.txt  creation-256-timer.txt  creation-32-notimer.txt  creation-32-timer.txt  creation-4-notimer.txt  creation-4-timer.txt  creation-4096-notimer.txt  creation-4096-timer.txt  creation-512-notimer.txt  creation-512-timer.txt  creation-64-notimer.txt  creation-64-timer.txt  creation-8-notimer.txt  creation-8-timer.txt
analytics/debug/existing-kmer/: existing-kmer-1024-notimer.txt  existing-kmer-1024-timer.txt  existing-kmer-128-notimer.txt  existing-kmer-128-timer.txt  existing-kmer-16-notimer.txt  existing-kmer-16-timer.txt  existing-kmer-2048-notimer.txt  existing-kmer-2048-timer.txt  existing-kmer-256-notimer.txt  existing-kmer-256-timer.txt  existing-kmer-32-notimer.txt  existing-kmer-32-timer.txt  existing-kmer-4-notimer.txt  existing-kmer-4-timer.txt  existing-kmer-4096-notimer.txt  existing-kmer-4096-timer.txt  existing-kmer-512-notimer.txt  existing-kmer-512-timer.txt  existing-kmer-64-notimer.txt  existing-kmer-64-timer.txt  existing-kmer-8-notimer.txt  existing-kmer-8-timer.txt
analytics/debug/existing-kmer/1024/: existing-kmer-1-notimer.json  existing-kmer-1-notimer.time  existing-kmer-1-timer.json  existing-kmer-1-timer.time  existing-kmer-10-notimer.json  existing-kmer-10-notimer.time  existing-kmer-10-timer.json  existing-kmer-10-timer.time  existing-kmer-2-notimer.json  existing-kmer-2-notimer.time  existing-kmer-2-timer.json  existing-kmer-2-timer.time  existing-kmer-3-notimer.json  existing-kmer-3-notimer.time  existing-kmer-3-timer.json  existing-kmer-3-timer.time  existing-kmer-4-notimer.json  existing-kmer-4-notimer.time  existing-kmer-4-timer.json  existing-kmer-4-timer.time  existing-kmer-5-notimer.json  existing-kmer-5-notimer.time  existing-kmer-5-timer.json  existing-kmer-5-timer.time  existing-kmer-6-notimer.json  existing-kmer-6-notimer.time  existing-kmer-6-timer.json  existing-kmer-6-timer.time  existing-kmer-7-notimer.json  existing-kmer-7-notimer.time  existing-kmer-7-timer.json  existing-kmer-7-timer.time  existing-kmer-8-notimer.json  existing-kmer-8-notimer.time  existing-kmer-8-timer.json  existing-kmer-8-timer.time  existing-kmer-9-notimer.json  existing-kmer-9-notimer.time  existing-kmer-9-timer.json  existing-kmer-9-timer.time
analytics/debug/existing-kmer/128/: existing-kmer-1-notimer.json  existing-kmer-1-notimer.time  existing-kmer-1-timer.json  existing-kmer-1-timer.time  existing-kmer-10-notimer.json  existing-kmer-10-notimer.time  existing-kmer-10-timer.json  (+33 more)
analytics/debug/mix-kmer/: mix-kmer-1024-notimer.txt  mix-kmer-1024-timer.txt  mix-kmer-128-notimer.txt  mix-kmer-128-timer.txt  mix-kmer-16-notimer.txt  mix-kmer-16-timer.txt  mix-kmer-2048-notimer.txt  mix-kmer-2048-timer.txt  mix-kmer-256-notimer.txt  mix-kmer-256-timer.txt  mix-kmer-32-notimer.txt  mix-kmer-32-timer.txt  mix-kmer-4-notimer.txt  mix-kmer-4-timer.txt  mix-kmer-4096-notimer.txt  mix-kmer-4096-timer.txt  mix-kmer-512-notimer.txt  mix-kmer-512-timer.txt  mix-kmer-64-notimer.txt  mix-kmer-64-timer.txt  mix-kmer-8-notimer.txt  mix-kmer-8-timer.txt
analytics/debug/new-kmer/: new-kmer-1024-notimer.txt  new-kmer-1024-timer.txt  new-kmer-128-notimer.txt  new-kmer-128-timer.txt  new-kmer-16-notimer.txt  new-kmer-16-timer.txt  new-kmer-2048-notimer.txt  new-kmer-2048-timer.txt  new-kmer-256-notimer.txt  new-kmer-256-timer.txt  new-kmer-32-notimer.txt  new-kmer-32-timer.txt  new-kmer-4-notimer.txt  new-kmer-4-timer.txt  new-kmer-4096-notimer.txt  new-kmer-4096-timer.txt  new-kmer-512-notimer.txt  new-kmer-512-timer.txt  new-kmer-64-notimer.txt  new-kmer-64-timer.txt  new-kmer-8-notimer.txt  new-kmer-8-timer.txt
app/: CMakeLists.txt  main.cpp
benchmark/: CMakeLists.txt  analysis.ipynb  becnhmark_set.cpp  benchmark_pair.cpp  benchmark_set.cpp  genome_dyna.cpp  genome_dyna_add.cpp  genome_dyna_create.cpp  small_dyna.cpp
benchmark/pair/: benchmark_add_find.cpp  benchmark_creation.cpp  benchmark_find.cpp  benchmark_insert.cpp  benchmark_remove.cpp  benchmark_remove_find.cpp
benchmark/set/: benchmark_add_find.cpp  benchmark_creation.cpp  benchmark_find.cpp  benchmark_insert.cpp  benchmark_remove.cpp  benchmark_remove_find.cpp
data/: 20K.res.kmc_pre
data/partition/: already_present.txt  missing.txt  sars-cov-2-pt_00.txt  sars-cov-2-pt_01.txt  sars-cov-2-pt_02.txt  sars-cov-2-pt_03.txt  sars-cov-2-pt_04.txt  sars-cov-2-pt_05.txt  sars-cov-2-pt_06.txt  sars-cov-2-pt_07.txt  sars-cov-2-pt_08.txt  sars-cov-2-pt_09.txt  sars-cov-2-pt_10.txt  sars-cov-2-pt_11.txt  sars-cov-2-pt_12.txt  sars-cov-2-pt_13.txt  sars-cov-2-pt_14.txt  sars-cov-2-pt_15.txt  sars-cov-2-pt_16.txt  sars-cov-2-pt_17.txt  sars-cov-2-pt_18.txt  sars-cov-2-pt_19.txt
data/sars-cov-2/: sars-cov-2.res.kmc_pre  sars-cov-2.res.kmc_suf  sorted-sars-cov-2.res.kmc_pre  sorted-sars-cov-2.res.kmc_suf
include/: encoder.hpp  kmer.hpp
include/kmc/kmc_api/: kmer_api.h  kmer_defs.h  mmer.cpp
include/pgm/: piecewise_linear_model.hpp
script/: generator_v2.py  merge.py  operation-notimer.csv  operation-timer.csv  plot.py
src/: dyna_dbg.hpp  kmc_utils.hpp  kmer.hpp  main.cpp  pgm_index_dynamic_set.hpp
test/: CMakeLists.txt  test_dyna_dbg.cpp  test_dyna_dbg_set.cpp  test_dynamic_pgm_set.cpp  test_kmer.cpp
(+3440 files in other folders)
